--- a/R1.md
+++ b/R1.md
@@ -4,3 +4,6 @@
 
 ### Day 1 03/09/2020
 Make a proyect in Django an create the base project.
+
+### Day 2 04/09/2020
+Make user models with profile and tweet description model.
