--- a/R1.md
+++ b/R1.md
@@ -7,3 +7,6 @@ Make a proyect in Django an create the base project.
 
 ### Day 2 04/09/2020
 Make user models with profile and tweet description model.
+
+### Day 3 06/09/2020
+Add template for home and modified model tweet, practice again html and css for templates in Django. Later I want to learn react, and migrate this app to Django Rest Framework to use React for Frontend.
