Modified templete, and finished basic data from twitter_clone homepage

--- a/R1.md
+++ b/R1.md
@@ -10,3 +10,6 @@ Make user models with profile and tweet description model.
 
 ### Day 3 06/09/2020
 Add template for home and modified model tweet, practice again html and css for templates in Django. Later I want to learn react, and migrate this app to Django Rest Framework to use React for Frontend.
+
+### Day 4 07/09/2020
+Continue modified the home, still learning about css and django templates. Finish basic model for tweets
