add new model comments

--- a/R1.md
+++ b/R1.md
@@ -13,3 +13,6 @@ Add template for home and modified model tweet, practice again html and css for 
 
 ### Day 4 07/09/2020
 Continue modified the home, still learning about css and django templates. Finish basic model for tweets
+
+### Day 5 11/09/2020
+C
